# goit-web-hw-13

./: docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
